[gd_scene load_steps=78 format=3 uid="uid://0mnpfdxtdf0"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ffe7a"]
[ext_resource type="Texture2D" uid="uid://di71d5puqnmo" path="res://art/characters/Hooded Knight/Hooded knight_finalsheet.png" id="3_uce3c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a04a"]
size = Vector2(11, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_8usiv"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_364lt"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x65w"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bya3d"]
atlas = ExtResource("3_uce3c")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7nbl"]
atlas = ExtResource("3_uce3c")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_807x2"]
atlas = ExtResource("3_uce3c")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvyyq"]
atlas = ExtResource("3_uce3c")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3alli"]
atlas = ExtResource("3_uce3c")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l07w6"]
atlas = ExtResource("3_uce3c")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2jow"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8x3m"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jah7"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqaal"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2a2u"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3d70"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i06c"]
atlas = ExtResource("3_uce3c")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iirwi"]
atlas = ExtResource("3_uce3c")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe3oh"]
atlas = ExtResource("3_uce3c")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6b7w"]
atlas = ExtResource("3_uce3c")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0atbx"]
atlas = ExtResource("3_uce3c")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5omm8"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3kt0"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcinx"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jk3a"]
atlas = ExtResource("3_uce3c")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_spikf"]
atlas = ExtResource("3_uce3c")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_li1tr"]
atlas = ExtResource("3_uce3c")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jys8a"]
atlas = ExtResource("3_uce3c")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnqiq"]
atlas = ExtResource("3_uce3c")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ebwq"]
atlas = ExtResource("3_uce3c")
region = Rect2(512, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ktb0"]
atlas = ExtResource("3_uce3c")
region = Rect2(576, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhtxp"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u3dl"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgyej"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8xci"]
atlas = ExtResource("3_uce3c")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ht26"]
atlas = ExtResource("3_uce3c")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_if3e1"]
atlas = ExtResource("3_uce3c")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exv2g"]
atlas = ExtResource("3_uce3c")
region = Rect2(384, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3ipc"]
atlas = ExtResource("3_uce3c")
region = Rect2(448, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm6iy"]
atlas = ExtResource("3_uce3c")
region = Rect2(512, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqoj4"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dta3u"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8gbd"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l6dk"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxpsp"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_524tu"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ltnd"]
atlas = ExtResource("3_uce3c")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fupu6"]
atlas = ExtResource("3_uce3c")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygsgu"]
atlas = ExtResource("3_uce3c")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj0e0"]
atlas = ExtResource("3_uce3c")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rpcr"]
atlas = ExtResource("3_uce3c")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ej7g"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqs5k"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehtha"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdxss"]
atlas = ExtResource("3_uce3c")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr0ed"]
atlas = ExtResource("3_uce3c")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t3o1"]
atlas = ExtResource("3_uce3c")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iwou"]
atlas = ExtResource("3_uce3c")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1aq6"]
atlas = ExtResource("3_uce3c")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_orkoj"]
atlas = ExtResource("3_uce3c")
region = Rect2(512, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_suo0e"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kidsg"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdi27"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e3kf"]
atlas = ExtResource("3_uce3c")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjq6l"]
atlas = ExtResource("3_uce3c")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_01n2w"]
atlas = ExtResource("3_uce3c")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_el2nw"]
atlas = ExtResource("3_uce3c")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk4tn"]
atlas = ExtResource("3_uce3c")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pis81"]
atlas = ExtResource("3_uce3c")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5ugg"]
atlas = ExtResource("3_uce3c")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_guvil"]
atlas = ExtResource("3_uce3c")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a51y"]
atlas = ExtResource("3_uce3c")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g3ed"]
atlas = ExtResource("3_uce3c")
region = Rect2(576, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7vhaw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8usiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_364lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x65w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bya3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_807x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvyyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3alli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l07w6")
}],
"loop": true,
"name": &"back_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2jow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8x3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jah7")
}],
"loop": true,
"name": &"back_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqaal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2a2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3d70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i06c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iirwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe3oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6b7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0atbx")
}],
"loop": true,
"name": &"back_walk",
"speed": 8.3
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5omm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3kt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcinx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jk3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spikf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li1tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jys8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnqiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ebwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ktb0")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhtxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u3dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgyej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8xci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ht26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if3e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exv2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3ipc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm6iy")
}],
"loop": true,
"name": &"front_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqoj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dta3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8gbd")
}],
"loop": true,
"name": &"front_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l6dk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxpsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_524tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ltnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fupu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygsgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj0e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rpcr")
}],
"loop": true,
"name": &"front_walk",
"speed": 8.3
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ej7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqs5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehtha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdxss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr0ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t3o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iwou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1aq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orkoj")
}],
"loop": true,
"name": &"side_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suo0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kidsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdi27")
}],
"loop": true,
"name": &"side_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e3kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjq6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01n2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el2nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk4tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pis81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5ugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guvil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a51y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g3ed")
}],
"loop": true,
"name": &"side_walk",
"speed": 8.3
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nygyt"]
radius = 21.0238

[node name="player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ffe7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
z_index = 4
y_sort_enabled = true
position = Vector2(0.5, -7.5)
shape = SubResource("RectangleShape2D_5a04a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_7vhaw")
animation = &"side_attack"
frame_progress = 0.287284
offset = Vector2(0, -12)

[node name="player_hitbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_nygyt")

[node name="attack_cooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.6

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(22, 26)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = -28
limit_right = 304
limit_bottom = 223
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
